@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Mar-01-2005 patrickh    Added an overload of
+                        org.vrjuggler.jccl.config.ConfigElement.setName() that
+                        supports undoing the name change operation.
+                        NEW VERSION: 0.92.6
 Feb-22-2005 patrickh    Extended org.vrjuggler.jccl.config.ConfigBroker to
                         include overloads of add() and remove() for new
                         ConfigElement objects that allow the caller to provide
